force-app/main/default/objects/PSA_Product_Package_Milestone__c/PSA_Product_Package_Milestone__c.object-meta.xml
<CustomObject>
    <description>Contains groupings of Product SKUs mapped to PSA Milestone generation parameters, for automatic generation of PSA Project Milestones based on Opportunity Products</description>
    <label>Product Package Milestone</label>
    <nameField>
        <displayFormat>PPM-{0000}</displayFormat>
        <label>Product Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Package Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>