force-app/main/default/objects/PSA_Product_Package_Milestone__c/fields/Milestone_Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name_Prefix__c</fullName>
    <description>Provides the beginning of the name that will be given to a generated Milestone.  An automatically-generated identifier will be appended.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provides the beginning of the automatically-generated Milestone name.</inlineHelpText>
    <label>Milestone Name Prefix</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>