force-app/main/default/objects/PSA_Product_Package_Milestone__c/fields/Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type__c</fullName>
    <description>Specifies the type of Milestone that will be generated</description>
    <inlineHelpText>Specifies the type of Milestone generated for this product</inlineHelpText>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billable Milestone</fullName>
                <default>true</default>
                <label>Billable Milestone</label>
            </value>
            <value>
                <fullName>Inclusive Milestone</fullName>
            </value>
            <value>
                <fullName>Hourly Milestone</fullName>
            </value>
            <value>
                <fullName>Complimentary</fullName>
            </value>
            <value>
                <fullName>Expense Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>