force-app/main/default/objects/PSA_Product_Package_Milestone__c/fields/Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>Offset_Days__c</fullName>
    <description>Determines the Target Date of the generated milestone as number of days following the &quot;First Milestone Date&quot; provided when generating Milestones from a Product Package</description>
    <inlineHelpText>Determines the Target Date of the generated milestone. Specify as the number of days following the &quot;First Milestone Date&quot; provided when generating Milestones from a Product Package. Can be 0 to match the First Milestone Date.</inlineHelpText>
    <label>Offset Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>