force-app/main/default/objects/PSA_Product_Package_Milestone__c/fields/Total_Package_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Package_Percent__c</fullName>
    <description>Total of all Milestone Percentages for the Package</description>
    <formula>Product_Package__r.Total_Milestone_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of all Milestone Percentages for the Package</inlineHelpText>
    <label>Total Package Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>