force-app/main/default/objects/PSA_Product_Package_Milestone__c/validationRules/ProductPackageMilestone_MaxMilestonePct.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductPackageMilestone_MaxMilestonePct</fullName>
    <active>true</active>
    <description>The Sum of the Milestone Percentages can not exceed 100% for the Package.</description>
    <errorConditionFormula>Percent__c  +  ( Product_Package__r.Total_Milestone_Percent__c -  IF(ISNEW(), 0, PRIORVALUE(Percent__c) ) ) &gt; 1</errorConditionFormula>
    <errorMessage>The Sum of the Milestone Percentages can not exceed 100% for the Package.</errorMessage>
</ValidationRule>